<resources>
    <string name="app_name">交运业务管理</string>

    <!-- Strings related to login -->
    <string name="prompt_email">手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="new_password">设置新密码</string>
    <string name="new_password2">再次输入新密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_up">新驾驶员登记</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="ok">确认</string>
    <string name="return_action">放弃</string>
    <string name="error_invalid_email">手机号码不是11位</string>
    <string name="error_invalid_password">密码不能少于4位</string>
    <string name="error_incorrect_password">用户名或密码不正确</string>
    <string name="error_field_required">请填写</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="join_us">加入我们，发现新奇</string>
    <string name="title_activity_main">MainActivity</string>

    <string-array name="vehicle">
        <item>大车</item>
        <item>小车</item>
    </string-array>

    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="title_activity_main2">交运危货管理</string>
    <string name="title_orderTaking">接单</string>
    <string name="title_startTransport">开始运输</string>
    <string name="title_endTransport">结束运输</string>
    <string name="title_myAccount">我的账户</string>
    <string name="title_huizhi">回执单</string>

    <string name="user_name">姓名</string>
    <string name="sex">性别</string>
    <string name="phone">手机号码(登录账号)</string>
    <string name="password">密码</string>
    <string name="title_activity_receipt">ReceiptActivity</string>

    <string name="receipt_id">运单号</string>
    <string name="vehicle_id">车号</string>
    <string name="client_name">客户单位</string>
    <string name="place_start">起始方向</string>
    <string name="place_end">终止方向</string>
    <string name="address">详细地址</string>
    <string name="contact">联系人</string>
    <string name="contacts_phone">联系号码</string>
    <string name="startTime">运输时间</string>
    <string name="weight">预发吨位</string>
    <string name="cargo_name">货物名称</string>
    <string name="safe_card">安全卡</string>
    <string name="price">单价</string>

    <string name="receipt_null">空空的，您还没有运单</string>
    <string name="huizhi_null">没有需要填写的回执单</string>
    <string name="tips">温馨提醒：只有在结束运输之后才可以填写回执单</string>
    <string name="fill_receipt">回执单填写</string>
    <string name="all_receipt">已完成的运单</string>
    <string name="title_activity_tstart">TStartActivity</string>

    <string name="verify">我们正在审核您的信息，请稍后...</string>
    <string name="verify_success">注册成功，初始密码是：111111</string>
    <string name="verify_failure">审核失败，请您重新填写信息并提交！</string>
    <string name="tips2">为了您的账户安全，请修改密码</string>
    <string name="tips3">上传高清图片，会提高审核成功率</string>
    <string name="title_activity_tend">TEndActivity</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="ip_address">IP地址</string>
    <string name="ip_port">端口</string>
<<<<<<< HEAD
    <string name="quit">退  出</string>
=======
>>>>>>> 9189f46ed660dffc72b2745f5e29f4409ca22d9f
</resources>
