<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/male_sculpture" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:hint="@string/new_password"
                    android:textSize="16sp"
                    android:inputType="textPassword"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:id="@+id/new_password2"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:hint="@string/new_password2"
                    android:textSize="16sp"
                    android:inputType="textPassword"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <Button
                    android:id="@+id/update_pass"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/sign_up"
                    android:text="@string/ok"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/return_action"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/return_action"
                    android:background="@drawable/gray_button"
                    android:layout_marginLeft="30dp"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</LinearLayout>