<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rapha.transpotsystem.TStartActivity"
    >

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <Button
                    android:id="@+id/tstart"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:background="@drawable/login"
                    android:text="@string/title_startTransport"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="18dp"
                    android:text="@string/receipt_id"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/receipt"/>

                <TextView
                    android:id="@+id/wayBillId2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="JW125388"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#d1d1d1">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="@string/vehicle_id"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/vehiclePlate2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="H13323"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#d1d1d1">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="@string/client_name"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/clientName2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="盐场"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#d1d1d1">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="@string/place_start"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:text="@string/place_end"
                    android:gravity="right"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/startCity2"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="淮安"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="—————"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/transport2"/>

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="—————"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/endCity2"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:text="上海"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="#d1d1d1">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="@string/address"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/address2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="上海市徐汇区宜山路100号"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#d1d1d1">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="@string/contact"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/contacts2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="王攀"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#d1d1d1">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="@string/contacts_phone"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/contacts_phone2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="18915104980"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#d1d1d1">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="@string/startTime"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/transportTime2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="2017年2月6号"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#d1d1d1">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="@string/weight"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tonnage2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="29.9吨"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#d1d1d1">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="@string/cargo_name"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/cargoName2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="废盐"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#d1d1d1">

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="18dp"
                    android:text="@string/safe_card"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/safeCard"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:text="文件.docx"
                    android:layout_marginRight="6dp"
                    android:gravity="right"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"/>

                <ImageView
                    android:id="@+id/safeCardImage"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/word"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#d1d1d1">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/baochouleixing2"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="@string/price"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/price2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="300￥/吨"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#d1d1d1">

            </LinearLayout>




        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
